--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ abc-delegation = "^0.3.1"
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
 gunicorn = "^20.0.4"
+uvicorn = "^0.11.8"
 
 [build-system]
 requires = ["poetry>=0.12"]
