--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ abc-delegation = "^0.3.1"
 black = "^20.8b1"
 gunicorn = "^20.0.4"
 uvicorn = "^0.11.8"
+pytest = "^6.2.2"
+pytest-asyncio = "^0.14.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
