--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ gunicorn = "^20.0.4"
 uvicorn = "^0.11.8"
 pytest = "^6.2.2"
 pytest-asyncio = "^0.14.0"
+pytest-cov = "^2.11.1"
+flake8 = "^3.8.4"
+mypy = "^0.800"
 
 [build-system]
 requires = ["poetry>=0.12"]
